--- a/index.html
+++ b/index.html
@@ -36,21 +36,16 @@
           </ul>
         </div>
       </div>-->
-      <h1 class="text-center">LAUNCH.<br>IT'S NEVER BEEN SO EASY</br><br><span class="glyphicon glyphicon-menu-down"></span></br></h1>
+      <h1 class="text-center"><span id="launch">LAUNCH.</span><br>IT'S NEVER BEEN SO EASY</br><br><span class="glyphicon glyphicon-menu-down"></span></br></h1>
       <nav>
         <div class="navigation" role="navigation">
         	<div class="nav-bary">
             <div class="mobile-icon">.</div>
             <ul>
-              <li><a  href="#">Menu1</a></li>
-
-              <li><a href="#">Menu2</a></li>
-
-              <li><a  href="#">Menu3</a></li>
-
-              <li><a href="#">Menu4</a></li>
-
-              <li><a  href="#">Menu5</a></li>
+              <img class="logo left" src="./img/logo.png">
+              <li><a  href="#">About</a></li>
+              <li><a href="#">Work</a></li>
+              <li><a  href="#">Contact</a></li>
             </ul>
            </div>
           </div>
