--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <!-- Place favicon.ico in the root directory -->
 
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/swiper.min.css">
+        <!-- <link rel="stylesheet" href="css/swiper.min.css"> -->
+        <link rel="stylesheet" href="css/swiper.css">
 
         <link rel="stylesheet" href="css/main.css">
 
@@ -151,8 +152,8 @@
                       <div class="swiper-slide" ><img src="img/people/tenze.jpg"/><div class="caption">Jake Lucifer</div><p>web design</p></div>
                   </div>
                   <!-- Add Arrows -->
-                 <div class="swiper-button-next"></div>
-                 <div class="swiper-button-prev"></div>
+                 <div class="swiper-button-next swiper-button-white"></div>
+                 <div class="swiper-button-prev swiper-button-white"></div>
           </div>
       </section> <!-- end of team section -->
 
