--- a/index.html
+++ b/index.html
@@ -160,6 +160,23 @@
       <section id="work">
           <div class="container">
               <h2 id="section-head" class="text-center">View Our work</h2>
+                <div class="work-header-container">
+                    <ul>
+                      <li class="work-header selected">Branding</li>
+                      <li class="work-header">Website Design</li>
+                      <li class="work-header">App Design</li>
+                      <li class="work-header">Case Studies</li>
+                    </ul>
+                    <img class="work-image">
+                    <img class="work-image">
+                    <img class="work-image">
+                    <img class="work-image">
+                    <img class="work-image">
+                    <img class="work-image">
+                    <img class="work-image">
+                    <img class="work-image">
+
+                </div>
           </div>
       </section>
 
