Fixed work container

--- a/index.html
+++ b/index.html
@@ -162,20 +162,51 @@
               <h2 id="section-head" class="text-center">View Our work</h2>
                 <div class="work-header-container">
                     <ul>
-                      <li class="work-header selected">Branding</li>
-                      <li class="work-header">Website Design</li>
-                      <li class="work-header">App Design</li>
-                      <li class="work-header">Case Studies</li>
+                      <li class="work-header header-branding selected" work-item="branding">Branding</li>
+                      <li class="work-header header-webdesign" work-item="web-design">Website Design</li>
+                      <li class="work-header header-appdesign" work-item="app-design">App Design</li>
+                      <li class="work-header header-casestudy" work-item="case-study">Case Studies</li>
                     </ul>
-                    <img class="work-image">
-                    <img class="work-image">
-                    <img class="work-image">
-                    <img class="work-image">
-                    <img class="work-image">
-                    <img class="work-image">
-                    <img class="work-image">
-                    <img class="work-image">
-
+                    <div class="work-images branding">
+                        <img class="work-image" src="./img/work/logo-1.png">
+                        <img class="work-image" src="./img/work/logo-2.png">
+                        <img class="work-image" src="./img/work/logo-3.png">
+                        <img class="work-image" src="./img/work/logo-4.png">
+                        <img class="work-image" src="./img/work/logo-5.png">
+                        <img class="work-image" src="./img/work/logo-6.png">
+                        <img class="work-image" src="./img/work/logo-7.png">
+                        <img class="work-image" src="./img/work/logo-8.png">
+                    </div>
+                    <div class="work-images web-design hide">
+                        <img class="work-image" src="./img/work/logo-1.png">
+                        <img class="work-image" src="./img/work/logo-2.png">
+                        <img class="work-image" src="./img/work/logo-3.png">
+                        <img class="work-image" src="./img/work/logo-4.png">
+                        <img class="work-image" src="./img/work/logo-5.png">
+                        <img class="work-image" src="./img/work/logo-6.png">
+                        <img class="work-image" src="./img/work/logo-7.png">
+                        <img class="work-image" src="./img/work/logo-8.png">
+                    </div>
+                    <div class="work-images app-design hide">
+                        <img class="work-image" src="./img/work/logo-1.png">
+                        <img class="work-image" src="./img/work/logo-2.png">
+                        <img class="work-image" src="./img/work/logo-3.png">
+                        <img class="work-image" src="./img/work/logo-4.png">
+                        <img class="work-image" src="./img/work/logo-5.png">
+                        <img class="work-image" src="./img/work/logo-6.png">
+                        <img class="work-image" src="./img/work/logo-7.png">
+                        <img class="work-image" src="./img/work/logo-8.png">
+                    </div>
+                    <div class="work-images case-studies hide">
+                        <img class="work-image" src="./img/work/logo-1.png">
+                        <img class="work-image" src="./img/work/logo-2.png">
+                        <img class="work-image" src="./img/work/logo-3.png">
+                        <img class="work-image" src="./img/work/logo-4.png">
+                        <img class="work-image" src="./img/work/logo-5.png">
+                        <img class="work-image" src="./img/work/logo-6.png">
+                        <img class="work-image" src="./img/work/logo-7.png">
+                        <img class="work-image" src="./img/work/logo-8.png">
+                    </div>
                 </div>
           </div>
       </section>
@@ -224,40 +255,6 @@ align-items: center;
 
 }-->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         <script
   src="https://code.jquery.com/jquery-3.1.1.min.js"
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
@@ -265,6 +262,7 @@ align-items: center;
         <script src="bootstrap/js/bootstrap.min.js"></script>
         <script src="js/swiper.min.js"></script>
         <script src="js/main.js"></script>
+        <script src="js/worksliders.js"></script>
         <!--<script>$('#theCarousel').carousel({
               interval: false
             })
