--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="css/swiper.css">
 
         <link rel="stylesheet" href="css/main.css">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
     </head>
     <body>
@@ -238,6 +239,29 @@
               <h2 id="section-head" class="text-center" style="color:#000">Contact Us</h2>
           </div>
       </section>
+
+      <footer>
+          <div class="container">
+              <div class="footer-item left">
+                  <div class="footer-logo"><img src="./img/logo.png"></div>
+                  Astroloft, a graphics communication company that strives for execellence
+                  <hr>
+                  Contact@astroloft.com
+                  <hr>
+                  <div class="social-icon"><i class="fa fa-twitter" aria-hidden="true"></i></div>
+                  <div class="social-icon"><i class="fa fa-google" aria-hidden="true"></i></div>
+                  <div class="social-icon"><i class="fa fa-pinterest-p" aria-hidden="true"></i></div>
+                  <div class="social-icon"><i class="fa fa-facebook" aria-hidden="true"></i></div>
+                  <div class="social-icon"><i class="fa fa-dribbble" aria-hidden="true"></i></div>
+                  <hr>
+              </div>
+              <div class="right">
+                  <div class="arrow-up">
+                      <i class="fa fa-arrow-up" aria-hidden="true" style="border: 3px solid;padding: 3px;"></i>
+                  </div>
+              </div>
+          </div>
+      </footer>
 
 <!-- /* Center slide text vertically */
 display: -webkit-box;
