--- a/index.html
+++ b/index.html
@@ -237,6 +237,31 @@
       <section id="contact">
           <div class="container">
               <h2 id="section-head" class="text-center" style="color:#000">Contact Us</h2>
+              <div class="row">
+                  <div class="col-md-4">
+                      <div class="input-group" style="width:100%">
+                          <input type="text" style="padding-top:20px;padding-bottom:20px;"class="form-control" placeholder="Username" aria-describedby="sizing-addon1">
+                      </div>
+                  </div>
+                  <div class="col-md-4">
+                      <div class="input-group" style="width:100%">
+                          <input type="text" style="padding-top:20px;padding-bottom:20px;"class="form-control" placeholder="Username" aria-describedby="sizing-addon1">
+                      </div>
+                  </div>
+                  <div class="col-md-4">
+                      <div class="input-group" style="width:100%">
+                          <input type="text" style="padding-top:20px;padding-bottom:20px;"class="form-control" placeholder="Username" aria-describedby="sizing-addon1">
+                      </div>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-md-12">
+                    <div class="form-group">
+                        <textarea class="form-control" rows="5" id="comment" placeholder="contact"></textarea>
+                    </div>
+                  </div>
+              </div>
+              <div class="contact-btn">Contact Us</div>
           </div>
       </section>
 
