--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <link rel="stylesheet" href="css/swiper.css">
         <link rel="stylesheet" href="css/main.css">
 
+
+
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -26,35 +28,11 @@
     <section id="banner">
 
       <img class="logo left" src="./img/logo.png">
-      <!--<div class='navbar navbar-static-top'>
-        <div class='container-fluid' id="menu">
-          <a href='/' class='navbar-brand'><img src="img/logo.svg" height="75px" width="75px"/></a>
-
-          <ul class='nav navbar-nav navbar-right'>
-            <li><a href='#'>Home</a></li>
-            <li><a href='#'>About</a></li>
-            <li><a href='#'>Our Work</a></li>
-            <li><a href='#'>Contact</a></li>
-          </ul>
-        </div>
-      </div>-->
       <h1 class="text-center"><span id="launch">LAUNCH.</span>
           <br>IT'S NEVER BEEN SO EASY</br>
           <br><div class="bounce"><span class="glyphicon glyphicon-menu-down bounce"></span></div></br>
       </h1>
-      <!--<nav>
-        <div class="navigation" role="navigation">
-        	<div class="nav-bary">
-            <div class="mobile-icon">.</div>
-            <ul>
-              <img class="logo left" src="./img/logo.png">
-              <li><a  href="#team-part">About</a></li>
-              <li><a href="#work-part">Work</a></li>
-              <li><a  href="#contact-part">Contact</a></li>
-            </ul>
-           </div>
-          </div>
-        </nav>-->
+
             <nav class="navbar">
                 <div class="navbar-wrapper">
                   <div class="navbar-header">
@@ -134,7 +112,7 @@
           <div class="caption">
             <h4>IDEA FORMATION</h4>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus animi impedit hic ipsam, facere delectus, reiciendis repellat ratione ducimus doloremque, cupiditate assumenda consequatur incidunt laudantium molestias est omnis et sequi.
+              Lorem ipsum dolor sit amet, consectetur adipisicing eslit. Accusamus animi impedit hic ipsam, facere delectus, reiciendis repellat ratione ducimus doloremque, cupiditate assumenda consequatur incidunt laudantium molestias est omnis et sequi.
             </p>
           </div>
         </div>
