nav working again

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
         <!-- <link rel="stylesheet" href="css/swiper.min.css"> -->
         <link rel="stylesheet" href="css/swiper.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/main.css">
 
 
     </head>
@@ -25,7 +25,7 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-
+<div id="top"></div>
     <section id="banner">
 
       <img class="logo left" src="./img/logo.png">
@@ -44,7 +44,7 @@
 
                       </button>
                   </div>
-                <ul class="menu-toggle desktop-menu">
+                <ul class="menu-toggle">
                   <li><a href="#about-part">About Us</a></li>
                   <li><a href="#about-part">About Us</a></li>
                   <li><a href="#about-part">About Us</a></li>
@@ -270,7 +270,13 @@
                     </div>
                   </div>
               </div>
-              <div class="contact-btn">Contact Us</div>
+              <div class="row">
+                <div class="col-sm-12">
+                    <div class="text-center">
+                        <div class="contact-btn">CONTACT</div>
+                    </div>
+                </div>
+              </div>
           </div>
       </section>
 
@@ -292,7 +298,7 @@
               </div>
               <div class="right">
                   <div class="arrow-up">
-                      <i class="fa fa-arrow-up" aria-hidden="true" style="border: 3px solid;padding: 3px;"></i>
+                      <a href="#top"><i class="fa fa-arrow-up" aria-hidden="true" style="border: 3px solid;padding: 3px;"></i></a>
                   </div>
               </div>
           </div>
@@ -343,29 +349,9 @@
   src="https://code.jquery.com/jquery-3.1.1.min.js"
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
   crossorigin="anonymous"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
-        <script src="js/swiper.min.js"></script>
-        <script src="js/main.js"></script>
+
         <script src="js/worksliders.js"></script>
-        <script>$('#theCarousel').carousel({
-              interval: false
-            })
 
-            $('.multi-item-carousel .item').each(function(){
-              var next = $(this).next();
-              if (!next.length) {
-                next = $(this).siblings(':first');
-              }
-              next.children(':first-child').clone().appendTo($(this));
-
-              if (next.next().length>0) {
-                next.next().children(':first-child').clone().appendTo($(this));
-              }
-              else {
-              	$(this).siblings(':first').children(':first-child').clone().appendTo($(this));
-              }
-            });
-        </script>
         <script>
           var swiper = new Swiper('.swiper-container', {
             pagination: '.swiper-pagination',
