desktop nav CSS done

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
               </div>
             </nav>
 
-            <nav>
-              <a href="#about-part"></a>
-              <a href="#work-part"></a>
-              <a href=""></a>
-              <a href=""></a>
-            </nav>
+            <div id="desktop-nav">
+              <a href="#about-part">About</a>
+              <a href="#work-part">Work</a>
+              <a href="#contact-part">Contact</a>
+
+            </div>
 
 
     </section> <!-- END OF BANNER SECTION -->
@@ -162,9 +162,11 @@
                       <div class="swiper-slide"><img src="img/people/tenze.jpg"/><div class="caption">Jake Lucifer</div><p>web design</p></div>
                   </div>
                   <!-- Add Arrows -->
-                 <div class="swiper-button-next swiper-button-white"></div>
-                 <div class="swiper-button-prev swiper-button-white"></div>
+                  <div class="swiper-button-next swiper-button-white"></div>
+                  <div class="swiper-button-prev swiper-button-white"></div>
           </div>
+
+
       </section> <!-- end of team section -->
       <div id="work-part"></div>
       <section id="work">
@@ -172,10 +174,10 @@
               <h2 id="section-head" class="text-center">View Our work</h2>
                 <div class="work-header-container">
                     <ul>
-                      <li class="work-header header-branding selected" work-item="branding">Branding</li>
-                      <li class="work-header header-webdesign" work-item="web-design">Website Design</li>
-                      <li class="work-header header-appdesign" work-item="app-design">App Design</li>
-                      <li class="work-header header-casestudy" work-item="case-study">Case Studies</li>
+                      <li class="work-header text-center header-branding selected" work-item="branding">Branding</li>
+                      <li class="work-header text-center header-webdesign" work-item="web-design">Website Design</li>
+                      <li class="work-header text-center header-appdesign" work-item="app-design">App Design</li>
+                      <li class="work-header text-center header-casestudy" work-item="case-study">Case Studies</li>
                     </ul>
                     <div class="work-images branding">
                         <img class="work-image" src="./img/work/logo-1.png">
