Fixed JS and backend

--- a/index.html
+++ b/index.html
@@ -251,12 +251,12 @@
               <div class="row">
                   <div class="col-md-4">
                       <div class="input-group" style="width:100%">
-                          <input type="text" style="padding-top:20px;padding-bottom:20px;"class="form-control" placeholder="Username" aria-describedby="sizing-addon1">
+                          <input type="text" style="padding-top:20px;padding-bottom:20px;"class="form-control" name="contactname" placeholder="Name" aria-describedby="sizing-addon1">
                       </div>
                   </div>
                   <div class="col-md-4">
                       <div class="input-group" style="width:100%">
-                          <input type="text" style="padding-top:20px;padding-bottom:20px;"class="form-control" placeholder="Username" aria-describedby="sizing-addon1">
+                          <input type="text" style="padding-top:20px;padding-bottom:20px;"class="form-control" name="email" placeholder="Email address" aria-describedby="sizing-addon1">
                       </div>
                   </div>
                   <div class="col-md-4">
@@ -268,7 +268,7 @@
               <div class="row">
                   <div class="col-md-12">
                     <div class="form-group">
-                        <textarea class="form-control" rows="5" id="comment" placeholder="contact"></textarea>
+                        <textarea class="form-control" rows="5" id="message" name="message" placeholder="contact"></textarea>
                     </div>
                   </div>
               </div>
@@ -347,6 +347,7 @@
         <script src="bootstrap/js/bootstrap.min.js"></script>
         <script src="js/swiper.min.js"></script>
         <script src="js/main.js"></script>
+        <script src="js/contact.js"></script>
         <script
   src="https://code.jquery.com/jquery-3.1.1.min.js"
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
