team section on mobile working

--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
 <div id="top"></div>
     <section id="banner">
 
+      <div id="desktop-nav">
+        <a href="#about-part">About</a>
+        <a href="#work-part">Work</a>
+        <a href="#contact-part">Contact</a>
+
+      </div>
+
       <img class="logo left" src="./img/logo.png">
       <h1 class="text-center"><span id="launch">LAUNCH.</span>
           <br>IT'S NEVER BEEN SO EASY</br>
@@ -54,12 +61,7 @@
               </div>
             </nav>
 
-            <div id="desktop-nav">
-              <a href="#about-part">About</a>
-              <a href="#work-part">Work</a>
-              <a href="#contact-part">Contact</a>
 
-            </div>
 
 
     </section> <!-- END OF BANNER SECTION -->
@@ -164,6 +166,34 @@
                   <!-- Add Arrows -->
                   <div class="swiper-button-next swiper-button-white"></div>
                   <div class="swiper-button-prev swiper-button-white"></div>
+          </div>
+          <div class="text-center">
+            <button class="view-more">VIEW MORE</button>
+          </div>
+          <div class="text-center">
+            <a href="team.html"><button class="view-more-desktop">VIEW MORE</button></a>
+          </div>
+          <div class="container text-center" id="mobile-team">
+              <div class="member">
+                <img src="img/people/jakelucifer.jpg" />
+                <h4>Jake Lucifer</h4>
+                <p>Web Designer</p>
+              </div>
+              <div class="member">
+                <img src="img/people/jakelucifer.jpg" />
+                <h4>Jake Lucifer</h4>
+                <p>Web Designer</p>
+              </div>
+              <div class="member">
+                <img src="img/people/jakelucifer.jpg" />
+                <h4>Jake Lucifer</h4>
+                <p>Web Designer</p>
+              </div>
+              <div class="member">
+                <img src="img/people/jakelucifer.jpg" />
+                <h4>Jake Lucifer</h4>
+                <p>Web Designer</p>
+              </div>
           </div>
 
 
