--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
         <!-- <link rel="stylesheet" href="css/swiper.min.css"> -->
         <link rel="stylesheet" href="css/swiper.css">
-
+        <link rel="stylesheet" href="css/sweetalert.css">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
         <link rel="stylesheet" href="css/main.css">
 
@@ -251,7 +251,7 @@
               <div class="row">
                   <div class="col-md-4">
                       <div class="input-group" style="width:100%">
-                          <input type="text" style="padding-top:20px;padding-bottom:20px;"class="form-control" name="contactname" placeholder="Name" aria-describedby="sizing-addon1">
+                          <input type="text" style="padding-top:20px;padding-bottom:20px;"class="form-control" name="name" placeholder="Name" aria-describedby="sizing-addon1">
                       </div>
                   </div>
                   <div class="col-md-4">
@@ -275,6 +275,7 @@
               <div class="row">
                 <div class="col-sm-12">
                     <div class="text-center">
+                        <div class="ajaxresponse"></div>
                         <div class="contact-btn">CONTACT</div>
                     </div>
                 </div>
@@ -347,6 +348,7 @@
         <script src="bootstrap/js/bootstrap.min.js"></script>
         <script src="js/swiper.min.js"></script>
         <script src="js/main.js"></script>
+        <script src="js/sweetalert.min.js"></script>
         <script src="js/contact.js"></script>
         <script
   src="https://code.jquery.com/jquery-3.1.1.min.js"
