photoshop image changes

--- a/index.html
+++ b/index.html
@@ -140,12 +140,13 @@
 
     </section> <!-- end of services section -->
     <div id="team-part"></div>
+    <div id="about-part"></div>
       <section id="team"> <!-- start of team section -->
 
-        <div id="about-part">
+
 
         </div>
-          <h2 id="section-head" class="text-center">Meet Our Team</h2>
+          <h2 id="section-head" class="text-center team-head">Meet Our Team</h2>
           <div class="swiper-container">
                   <div class="swiper-wrapper">
                       <div class="swiper-slide"><img src="img/people/jakelucifer.jpg"/><div class="caption">Jake Lucifer</div><p>web design</p></div>
