inputting real data

--- a/index.html
+++ b/index.html
@@ -70,69 +70,57 @@
           <img src="img/idea.png"/>
           <div class="caption">
             <h4>IDEA FORMATION</h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus animi impedit hic ipsam, facere delectus, reiciendis repellat ratione ducimus doloremque, cupiditate assumenda consequatur incidunt laudantium molestias est omnis et sequi.
-            </p>
+            <p>We understand that coming up with ideas for your graphic design needs may be troubling at times, we are here to help with our idea formation process. We will guild you through, step by step, in order to maximise suitable ideas for you.</p>
           </div>
         </div>
       </div>
 
       <div id="service-row-1" class="col-md-4">
         <div class="thumbnail">
-          <img src="img/idea.png"/>
+          <img src="img/design.png"/>
           <div class="caption">
-            <h4>IDEA FORMATION</h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus animi impedit hic ipsam, facere delectus, reiciendis repellat ratione ducimus doloremque, cupiditate assumenda consequatur incidunt laudantium molestias est omnis et sequi.
-            </p>
+            <h4>DESIGN DEVELOPMENT</h4>
+            <p>Once ideas have been created and you are ready for the design process, our team begins a five step process: R&D, Framework, Initial Design, Client Feedback and Final Design. Our design teams work closely with clients to ensure client satisfaction and design consistency.            </p>
           </div>
         </div>
       </div>
 
       <div id="service-row-1" class="col-md-4">
         <div class="thumbnail">
-          <img src="img/idea.png"/>
+          <img src="img/brand.png"/>
           <div class="caption">
-            <h4>IDEA FORMATION</h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus animi impedit hic ipsam, facere delectus, reiciendis repellat ratione ducimus doloremque, cupiditate assumenda consequatur incidunt laudantium molestias est omnis et sequi.
-            </p>
+            <h4>BRAND IDENTITY</h4>
+            <p>Identity is a main contributor to what defines you or your business from your competitors. Our team of marketing consultants and brand identity specialists ensure that your identity does not go unnoticed, and intrigues not only your current audience, but future ones as well.</p>
           </div>
         </div>
       </div>
 
       <div id="service-row-1" class="col-md-4">
         <div class="thumbnail">
-          <img src="img/idea.png"/>
+          <img src="img/web.png"/>
           <div class="caption">
-            <h4>IDEA FORMATION</h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing eslit. Accusamus animi impedit hic ipsam, facere delectus, reiciendis repellat ratione ducimus doloremque, cupiditate assumenda consequatur incidunt laudantium molestias est omnis et sequi.
-            </p>
+            <h4>WEBSITE DESIGN</h4>
+            <p>Web design is a core aspect to services we offer here at Astroloft. Serving a vast amount of clients from various industries, our web designers are suited to adapt to your target market and ensure your ideas come to life.</p>
           </div>
         </div>
       </div>
 
       <div id="service-row-1" class="col-md-4">
         <div class="thumbnail">
-          <img src="img/idea.png"/>
+          <img src="img/app-design.png"/>
           <div class="caption">
-            <h4>IDEA FORMATION</h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus animi impedit hic ipsam, facere delectus, reiciendis repellat ratione ducimus doloremque, cupiditate assumenda consequatur incidunt laudantium molestias est omnis et sequi.
-            </p>
+            <h4>APPLICATION DESIGN</h4>
+            <p>Not only do we offer web design, but application design as well. Mobile applications have a significant influence on markets in the last decade, and it is important to have intriguing and captivating design and functionality to ensure satisfaction to potential clients.            </p>
           </div>
         </div>
       </div>
 
       <div id="service-row-1" class="col-md-4">
         <div class="thumbnail">
-          <img src="img/idea.png"/>
+          <img src="img/app-dev.png"/>
           <div class="caption">
-            <h4>IDEA FORMATION</h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus animi impedit hic ipsam, facere delectus, reiciendis repellat ratione ducimus doloremque, cupiditate assumenda consequatur incidunt laudantium molestias est omnis et sequi.
-            </p>
+            <h4>WEB & APP DEVELOPMENT</h4>
+            <p>After our team of web and application designers have finished the final design process, our in-house development team ensures the user experience is met to it’s fullest potential. If you already have a design, and are wanting development, our team can assist with this as well.</p>
           </div>
         </div>
       </div>
@@ -149,12 +137,20 @@
           <h2 id="section-head" class="text-center team-head">Meet Our Team</h2>
           <div class="swiper-container">
                   <div class="swiper-wrapper">
-                      <div class="swiper-slide"><img src="img/people/jakelucifer.jpg"/><div class="caption">Jake Lucifer</div><p>web design</p></div>
-                      <div class="swiper-slide"><img src="img/people/notjefffree.jpeg"/><div class="caption">Jake Lucifer</div><p>web design</p></div>
-                      <div class="swiper-slide"><img src="img/people/tomrdesigns.jpg"/><div class="caption">Tom Robets</div><p>web design</p></div>
-                      <div class="swiper-slide"><img src="img/people/oseii.jpg"/><div class="caption">Jake Lucifer</div><p>web design</p></div>
-                      <div class="swiper-slide"><img src="img/people/owendesigns.jpg"/><div class="caption">Jake Lucifer</div><p>web design</p></div>
-                      <div class="swiper-slide"><img src="img/people/tenze.jpg"/><div class="caption">Jake Lucifer</div><p>web design</p></div>
+                      <div class="swiper-slide"><img src="img/people/royal.jpg"/><div class="caption">CAMERON ROYAL</div><p>Owner</p></div>
+                      <div class="swiper-slide"><img src="img/people/tomrdesigns.jpg"/><div class="caption">TOM ROBERTS</div><p>Co-Owner</p></div>
+                      <div class="swiper-slide"><img src=""/><div class="caption">DEREK NEWELL</div><p>Marketing</p></div>
+                      <div class="swiper-slide"><img src="img/people/louis.jpg"/><div class="caption">LOUIS MORGAN</div><p>Senior Developer</p></div>
+                      <div class="swiper-slide"><img src="img/people/yambao.jpg"/><div class="caption">JUSTIN YAMBAO</div><p>Senior Designer</p></div>
+                      <div class="swiper-slide"><img src=""/><div class="caption">ROB DEARLING</div><p>Developer</p></div>
+                      <div class="swiper-slide"><img src="img/people/notjefffree.jpeg"/><div class="caption">ENOCH APPATHURAI</div><p>Developer</p></div>
+                      <div class="swiper-slide"><img src="img/people/oseii.jpg"/><div class="caption">MARTIHN MERTENS</div><p>Designer</p></div>
+                      <div class="swiper-slide"><img src=""/><div class="caption">BEN DEMPSEY</div><p>Brand Designer</p></div>
+                      <div class="swiper-slide"><img src="img/people/dannyh01.jpg"/><div class="caption">DANNY HILL</div><p>Designer</p></div>
+                      <div class="swiper-slide"><img src="img/people/jakelucifer.jpg"/><div class="caption">JAKE LUCIFER</div><p>Typographer</p></div>
+                      <div class="swiper-slide"><img src="img/people/tenze.jpg"/><div class="caption">LUUK WIJGERSE</div><p>Motion Artist</p></div>
+
+
                   </div>
                   <!-- Add Arrows -->
                   <div class="swiper-button-next swiper-button-white"></div>
@@ -168,24 +164,64 @@
           </div>
           <div class="container text-center" id="mobile-team">
               <div class="member">
-                <img src="img/people/jakelucifer.jpg" />
-                <h4>Jake Lucifer</h4>
-                <p>Web Designer</p>
+                <img src="img/people/royal.jpg" />
+                <h4>CAMERON ROYAL</h4>
+                <p>Owner</p>
+              </div>
+              <div class="member">
+                <img src="img/people/tomrdesigns.jpg" />
+                <h4>TOM ROBERTS</h4>
+                <p>Co-Owner</p>
               </div>
               <div class="member">
                 <img src="img/people/jakelucifer.jpg" />
-                <h4>Jake Lucifer</h4>
-                <p>Web Designer</p>
+                <h4>DEREK NEWELL</h4>
+                <p>Merketing</p>
+              </div>
+              <div class="member">
+                <img src="img/people/louis.jpg" />
+                <h4>LOUIS MORGAN</h4>
+                <p>Senior Developer</p>
+              </div>
+              <div class="member">
+                <img src="img/people/yambao.jpg" />
+                <h4>JUSTIN YAMBAO</h4>
+                <p>Senior Designer</p>
+              </div>
+              <div class="member">
+                <img src="img/people/yambao.jpg" />
+                <h4>ROB DEARLING</h4>
+                <p>Developer</p>
+              </div>
+              <div class="member">
+                <img src="img/people/notjefffree.jpeg" />
+                <h4>ENOCH APPATHURAI</h4>
+                <p>DEVELOPER</p>
+              </div>
+              <div class="member">
+                <img src="img/people/oseii.jpg" />
+                <h4>MARTIJN MERTENS</h4>
+                <p>Designer</p>
+              </div>
+              <div class="member">
+                <img src="img/people/yambao.jpg" />
+                <h4>BEN DEMPSY</h4>
+                <p>Designer</p>
+              </div>
+              <div class="member">
+                <img src="img/people/dannyh01.jpg" />
+                <h4>DANNY HILL</h4>
+                <p>Designer</p>
               </div>
               <div class="member">
                 <img src="img/people/jakelucifer.jpg" />
-                <h4>Jake Lucifer</h4>
-                <p>Web Designer</p>
+                <h4>JAKE LUCIFER</h4>
+                <p>Typeographer</p>
               </div>
               <div class="member">
-                <img src="img/people/jakelucifer.jpg" />
-                <h4>Jake Lucifer</h4>
-                <p>Web Designer</p>
+                <img src="img/people/tenze.jpg" />
+                <h4>LUUK WIJERSE</h4>
+                <p>Motion Artist</p>
               </div>
           </div>
 
