--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                         <img class="work-image" src="./img/work/logo-8.png">
                     </div>
                     <div class="work-images app-design hide">
-                        <img class="work-image" src="./img/work/logo-1.png">
+                        <img class="work-image" src="./img/work/justin-gif.gif">
                         <img class="work-image" src="./img/work/logo-2.png">
                         <img class="work-image" src="./img/work/logo-3.png">
                         <img class="work-image" src="./img/work/logo-4.png">
