Changed username for phone no

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                   </div>
                   <div class="col-md-4">
                       <div class="input-group" style="width:100%">
-                          <input type="text" style="padding-top:20px;padding-bottom:20px;"class="form-control" placeholder="Username" aria-describedby="sizing-addon1">
+                          <input type="text" style="padding-top:20px;padding-bottom:20px;"class="form-control" placeholder="Phone" aria-describedby="sizing-addon1">
                       </div>
                   </div>
               </div>
