added new images and applied them

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                   <div class="swiper-wrapper">
                       <div class="swiper-slide"><img src="img/people/royal.jpg"/><div class="caption">CAMERON ROYAL</div><p>Owner</p></div>
                       <div class="swiper-slide"><img src="img/people/tomrdesigns.jpg"/><div class="caption">TOM ROBERTS</div><p>Co-Owner</p></div>
-                      <div class="swiper-slide"><img src=""/><div class="caption">DEREK NEWELL</div><p>Marketing</p></div>
+                      <div class="swiper-slide"><img src="img/people/nogridlines.png"/><div class="caption">DEREK NEWELL</div><p>Marketing</p></div>
                       <div class="swiper-slide"><img src="img/people/louis.jpg"/><div class="caption">LOUIS MORGAN</div><p>Senior Developer</p></div>
                       <div class="swiper-slide"><img src="img/people/yambao.jpg"/><div class="caption">JUSTIN YAMBAO</div><p>Senior Designer</p></div>
                       <div class="swiper-slide"><img src=""/><div class="caption">ROB DEARLING</div><p>Developer</p></div>
